--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-http = "3.8.0"
+actix-service = "2.0.2"
 actix-web = "4.7.0"
 aes = "0.8.4"
 rand = "0.8.5"
